# fp2021

.github/workflows/: BuildMaster.yml  PR.yml
Bash/: Bash.opam  README.md  REPL.ml  dune  dune-project
Bash/demos/: demoAO.ml  demoInterpret.ml  demoInterrupt.ml  demoNO.ml  demoParse.ml  dune  interpretTests.t  parsingTests.t
Bash/lib/: ast.ml  ast.mli  builtins.ml  builtins.mli  dune  interpreter.ml  interpreter.mli  parser.ml  parser.mli  tests.ml
Kotlin/: Kotlin.opam  README.md  REPL.ml  dune  dune-project
Kotlin/demos/: demoBFS.ml  demoFactorial.ml  demoFlowSensitiveTyping.ml  demoInvalidProgramParse.ml  demoIteratorMap.ml  dune  interpretTests.t
Kotlin/lib/: ast.ml  demos.ml  dune  interpreter.ml  parser.ml  std.ml  tests.ml  utils.ml  value_types.ml
Lambda/: Lambda.opam  REPL.ml  dune-project  repl.t
Lambda/QCtest/: QCTests.ml  runULC.ml
Lambda/demos/: demoAO.ml  demoNO.ml  demoParse.ml  parsingTests.t
Lambda/lib/: Pprintast.ml  Printast.ml  ast.mli  interpret.ml  lambda.ml  parser.ml  parser.mli  tests.ml  utils.ml
OCamlEff/lib/: parser.ml
OCamlTyEff/: README.md
OCamlTyEff/demos/: demo.ml  demoExc.ml  demoExc.t  demoFail.ml  demoFail.t  demoInfer.t  demoList.ml  demoList.t  demoPrint.ml  demoPrint.t  demoRec.ml  demoRec.t  demoRefClosure.ml  demoRefClosure.t  demoRefFix.t  demoWeak.t  dune
OCamlTyEff/lib/: ast.ml  dune  inference.ml  interpret.ml  parser.ml  ty.ml  tychk.ml
OcamlADT/: REPL.ml
OcamlADT/demos/: demoOcamlADT.ml  demoOcamlAdt.t  dune
OcamlADT/lib/: ast.ml  interpret.ml  parser.ml
OcamlObj/: .ocamlformat  REPL.ml  dune  dune-project  settings.json
OcamlObj/lib/: Pprintast.ml  Printast.ml  ast.cmi  ast.cmo  ast.ml  dune  interpret.ml  parser.ml  parsertest.ml  tests.ml
Ruby/: .ocamlformat  README.md  Ruby.opam  dune  dune-project
Ruby/lib/: ast.ml  dune  parser.ml  tests.ml
doc/Kotlin/Kotlin/Kotlin_lib__Interpreter/: index.html
doc/Kotlin/Kotlin/Kotlin_lib__Parser/: index.html
doc/Kotlin/Kotlin/Kotlin_lib__Std/: index.html
doc/Kotlin/Kotlin/Kotlin_lib__Tests/: index.html
doc/Kotlin/Kotlin/Kotlin_lib__Utils/: index.html
doc/Kotlin/Kotlin/Kotlin_lib__Value_types/: index.html
doc/Lambda/Lambda/: index.html
doc/Lambda/Lambda/Lambda_lib/: index.html
doc/Lambda/Lambda/Lambda_lib__Ast/: index.html
doc/Lambda/Lambda/Lambda_lib__Interpret/: index.html
doc/Lambda/Lambda/Lambda_lib__Lambda/: index.html
doc/Lambda/Lambda/Lambda_lib__Parser/: index.html
doc/Lambda/Lambda/Lambda_lib__Pprintast/: index.html
doc/Lambda/Lambda/Lambda_lib__Printast/: index.html
doc/Lambda/Lambda/Lambda_lib__Tests/: index.html
doc/Lambda/Lambda/Lambda_lib__Utils/: index.html
doc/OCamlEff/OCamlEff/OcamlEff_lib/: index.html
doc/OCamlEff/OCamlEff/OcamlEff_lib__TypingTests/: index.html
doc/OCamlTyEff/OCamlTyEff/: index.html
doc/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib/: index.html
doc/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib__Inference/: index.html
doc/OCamlTyEff/OCamlTyEff/Ocaml_typed_effects_lib__Ast/: index.html
doc/OCamlTyEff/OCamlTyEff/Ocaml_typed_effects_lib__Bind/: index.html
doc/OCamlTyEff/OCamlTyEff/Ocaml_typed_effects_lib__Interpret/: index.html
doc/OCamlTyEff/OCamlTyEff/Ocaml_typed_effects_lib__Std/: index.html
doc/OcamlADT/OcamlADT/: index.html
doc/OcamlADT/OcamlADT/OcamlADT_lib/: index.html
doc/OcamlADT/OcamlADT/OcamlADT_lib__Interpret/: index.html
doc/Ruby/: index.html
doc/Ruby/Ruby/: index.html
doc/Ruby/Ruby/Ruby_lib/: index.html
doc/Ruby/Ruby/Ruby_lib__Ast/: index.html
doc/Ruby/Ruby/Ruby_lib__Parser/: index.html
doc/Ruby/Ruby/Ruby_lib__Tests/: index.html
docs/Bash/Bash/Bash_lib/: index.html
docs/Bash/Bash/Bash_lib__Builtins/: index.html
docs/Bash/Bash/Bash_lib__Interpreter/: index.html
docs/C/C/C_lib/: index.html
docs/C/C/C_lib__BSrch/: index.html
docs/CsharpExcep/: index.html
docs/CsharpExcep/CsharpExcep/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib__Ast/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib__Hashtbl_der/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib__Interpret_classes/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib__Interpreter/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib__Parser/: index.html
docs/CsharpExcep/CsharpExcep/Csharp_lib__Value_types/: index.html
docs/Cypher/: index.html
docs/Cypher/Cypher/: index.html
docs/Cypher/Cypher/Cypher_lib/: index.html
docs/Cypher/Cypher/Cypher_lib__Ast/: index.html
docs/Cypher/Cypher/Cypher_lib__Interpreter/: index.html
docs/Cypher/Cypher/Cypher_lib__Parser/: index.html
docs/Kotlin/: index.html
docs/Kotlin/Kotlin/: index.html
docs/Kotlin/Kotlin/Kotlin_lib/: index.html
docs/Kotlin/Kotlin/Kotlin_lib__Ast/: index.html
docs/Kotlin/Kotlin/Kotlin_lib__Demos/: index.html
docs/OCamlEff/OCamlEff/OcamlEff_lib/: index.html
docs/OCamlEff/OCamlEff/OcamlEff_lib__Stdlib/: index.html
docs/OCamlTyEff/: index.html
docs/OCamlTyEff/OCamlTyEff/: index.html
docs/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib/: index.html
docs/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib__Ast/: index.html
docs/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib__Bind/: index.html
docs/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib__Interpret/: index.html
docs/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib__Parser/: index.html
docs/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib__Std/: index.html
docs/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib__Ty/: index.html
docs/OCamlTyEff/OCamlTyEff/Ocaml_ty_eff_lib__Tychk/: index.html
docs/OcamlADT/: index.html
docs/Ruby/Ruby/: index.html
docs/Ruby/Ruby/Ruby_lib/: index.html
(+238 files in other folders)
