(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Stepan Trefilov")

(maintainers "https://github.com/IAmFunkyFrog")

(bug_reports "FIXME where to put bug reports about the code")

(homepage "FIXME Homepage")

(package
 (name Kotlin) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "An interpreter for kotlin")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_expect
  ppx_show
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
