(executable
 (name demoAO)
 (modules demoAO)
 (public_name demoAO)
 (libraries bash_lib))

(executable
 (name demoNO)
 (modules demoNO)
 (public_name demoNO)
 (libraries bash_lib))

(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries bash_lib stdio))

(cram
 (deps ./demoNO.exe ./demoAO.exe ./demoParse.exe))
