(executable
 (name demoParse)
 (modules demoParse)
 (public_name demoParse)
 (libraries bash_lib stdio))

(executable
 (name demoInterpret)
 (modules demoInterpret)
 (public_name demoInterpret)
 (libraries bash_lib stdio))

(executable
 (name demoInterrupt)
 (modules demoInterrupt)
 (public_name demoInterrupt)
 (libraries bash_lib stdio))

(cram
 (deps ./demoParse.exe ./demoInterpret.exe ./demoInterrupt.exe))
